# segyr-bot

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt  run_redis_e2e.py
.github/workflows/: ci.yml  deploy.yml  docker.yml
agents/: __init__.py  action_engine.py  decision_engine.py  orchestrator.py
api/: main.py
api/middleware/: __init__.py  security.py
api/routes/: dashboard.py  health.py  metrics.py  repair.py
config/: .env.example  __init__.py  settings.py
core/: agent.py  llm.py  logging.py  memory.py  redis_memory.py  system_prompt.py  tools.py
core/agent/: __init__.py  context.py  loop.py  memory.py
core/bus/: __init__.py  events.py  queue.py
core/cache/: __init__.py  llm_cache.py  redis_client.py
core/monitoring/: __init__.py  action_executor.py  alerting.py  auto_repair.py  policy_engine.py
core/providers/: base.py  litellm_provider.py  registry.py  router_provider.py
core/queue/: __init__.py  queue.py
core/redis/: __init__.py  client.py
core/session/: manager.py
frontend/: docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
segyr_bot/: __init__.py  gateway.py
tests/: conftest.py  test_actions.py  test_api.py  test_auth_utils.py  test_auto_repair_hardening.py  test_cashflow.py  test_chantier_risk.py  test_health.py  test_orchestrator.py  test_segyr_channels.py  test_tools.py
tools/: client_tool.py  finance_tool.py  invoice_tool.py  postgres_tool.py
(+79 files in other folders)
